--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
     "preview": "vite preview",
     "test": "npm install && vitest run",
     "test:coverage": "vitest run --coverage",
@@ -40,6 +42,7 @@
     "@vitest/coverage-v8": "^3.1.3",
     "autoprefixer": "^10.4.17",
     "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "fast-xml-parser": "^4.3.2",
@@ -48,6 +51,7 @@
     "jsdom": "^24.0.0",
     "msw": "^2.8.2",
     "postcss": "^8.4.35",
+    "prettier": "^3.8.0",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
