--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.12.0",
-    "styled-components": "^6.1.18"
+    "styled-components": "^6.1.18",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
