--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "date-fns": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^6.1.0",
     "react-router": "^7.12.0",
     "styled-components": "^6.1.18",
     "zod": "^4.3.5"
