--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "^3.1.3",
     "autoprefixer": "^10.4.17",
+    "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react-hooks": "^5.1.0",
